--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1_FjAoDlmqOnFqr8ckuw9Ifw9T8oYgWU&libraries=places"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
