Add meta words to index.html .

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Flex-Trans Cabulance"
-    />
+    <meta name="description" content="Flex-Trans Cabulance"/>
+    <meta name="keywords" content="flex-trans, flex trans, flex trans seattle, medical transportation seattle, wheelchair transportation seattle, wheelchair transport services seattle, senior transportation services seattle, non emergency medical transportation seattle, Seattle Medical Senior Transportation, handicapped transportation service Washington, handicapped transportation in Seattle, hospital releases transportation seattle">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
